{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 59,
  "lineage": "14853a83-f038-a3e0-89c9-5753ed23aa6e",
  "resources": [
    {
      "module": "module.mysql_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:528910777322:instance/i-0156c3961c0153b3d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0156c3961c0153b3d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d1f77fce9dd2f14f"
              }
            ],
            "primary_network_interface_id": "eni-0d1f77fce9dd2f14f",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_ip": "10.0.1.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecaa4d8ba87e9a6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034da61bc5bcbcc5e",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054bdd42640160ad8"
            ]
          },
          "dependencies": [
            "module.mysql_instance.aws_network_interface.server-nic",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.new_vpc",
            "module.security-group.aws_security_group.mysql"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_instance",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0d1f77fce9dd2f14f",
            "ipv6_address_count": 0,
            "mac_address": "12:cc:4e:83:67:1b",
            "private_ip": "10.0.1.18",
            "private_ips": [
              "10.0.1.18"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-054bdd42640160ad8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034da61bc5bcbcc5e"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.new_vpc",
            "module.security-group.aws_security_group.mysql"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03308afda75a4c7d2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-245-2.compute-1.amazonaws.com",
            "public_ip": "52.71.245.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528910777322:internet-gateway/igw-0e56a41ff29faec4f",
            "id": "igw-0e56a41ff29faec4f",
            "owner_id": "528910777322",
            "tags": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03308afda75a4c7d2",
            "id": "nat-0600d53b12d54e13a",
            "network_interface_id": "eni-07d1c463c73511bde",
            "private_ip": "10.0.156.66",
            "public_ip": "52.71.245.2",
            "subnet_id": "subnet-07bd3a0c16c58e668",
            "tags": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0093a81834472d7ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0600d53b12d54e13a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0093a81834472d7ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e56a41ff29faec4f",
            "id": "r-rtb-0fe7d3daef495da461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe7d3daef495da46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0093a81834472d7ae",
            "owner_id": "528910777322",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe7d3daef495da46",
            "owner_id": "528910777322",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_rt"
            },
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0545393c466cdf67f",
            "route_table_id": "rtb-0093a81834472d7ae",
            "subnet_id": "subnet-034da61bc5bcbcc5e"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e3ec79025ec45ea",
            "route_table_id": "rtb-0fe7d3daef495da46",
            "subnet_id": "subnet-07bd3a0c16c58e668"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528910777322:subnet/subnet-034da61bc5bcbcc5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-034da61bc5bcbcc5e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528910777322",
            "tags": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528910777322:subnet/subnet-07bd3a0c16c58e668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.156.0/24",
            "id": "subnet-07bd3a0c16c58e668",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528910777322",
            "tags": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528910777322:vpc/vpc-0741dcebb048c21c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae15f39d946451ae",
            "default_route_table_id": "rtb-0c2395e1e0979e249",
            "default_security_group_id": "sg-01b6c6369db5d5749",
            "dhcp_options_id": "dopt-66591a1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0741dcebb048c21c1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c2395e1e0979e249",
            "owner_id": "528910777322",
            "tags": {
              "Name": "first_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nginx_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:528910777322:instance/i-09760baaf9e2c3843",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09760baaf9e2c3843",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c71b09d187c383e1"
              }
            ],
            "primary_network_interface_id": "eni-0c71b09d187c383e1",
            "private_dns": "ip-10-0-156-231.ec2.internal",
            "private_ip": "10.0.156.231",
            "public_ip": "54.86.75.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0723067a279178c5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bd3a0c16c58e668",
            "tags": {
              "Name": "nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04fde0840b021ef88"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.new_vpc",
            "module.nginx_instance.aws_network_interface.server-nic",
            "module.security-group.aws_security_group.nginx"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_instance",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0c71b09d187c383e1",
            "ipv6_address_count": 0,
            "mac_address": "12:99:4b:7b:4e:69",
            "private_ip": "10.0.156.231",
            "private_ips": [
              "10.0.156.231"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04fde0840b021ef88"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bd3a0c16c58e668"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.new_vpc",
            "module.security-group.aws_security_group.nginx"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528910777322:security-group/sg-054bdd42640160ad8",
            "description": "Allow inbound mysql traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All networks allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054bdd42640160ad8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 33060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 33060
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "528910777322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528910777322:security-group/sg-04fde0840b021ef88",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All networks allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fde0840b021ef88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "528910777322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741dcebb048c21c1"
          },
          "dependencies": [
            "module.network.aws_vpc.new_vpc"
          ]
        }
      ]
    }
  ]
}